# experiments

./: .gitattributes  .gitignore  README
bullet2/: premake4.lua
bullet2/BulletSoftBody/: btDefaultSoftBodySolver.h
bullet2/DemosCommon/: DemoApplication.h  GLES2AngleWindow.cpp  GLES2AngleWindow.h  GLES2Renderer.cpp  GLES2Renderer.h  GLES2ShapeDrawer.cpp  GLES2ShapeDrawer.h  GL_ShapeDrawer.cpp  OpenGL2Renderer.cpp  OpenGL2Renderer.h  OpenGL3CoreRenderer.cpp  OpenGL3CoreRenderer.h
bullet2/LinearMath/: btAlignedAllocator.cpp  btAlignedAllocator.h  btQuaternion.h  btScalar.h  btSerializer.h  btTransformUtil.h
dynamics/CDTestFramework/: BipartiteBoxPruning.cpp  BipartiteBoxPruning.h  BulletSAPCompleteBoxPruningTest.cpp  BulletSAPCompleteBoxPruningTest.h  CDTestFramework.cpp  CapsuleMeshQuery.cpp  CapsuleMeshQuery.h  CollisionTest.cpp  CollisionTest.h  CompleteBoxPruning.cpp  CompleteBoxPruning.h  OBBMeshQuery.cpp  OBBMeshQuery.h  OpcodeArraySAPTest.cpp  OpcodeArraySAPTest.h  Profiling.h  SphereMeshQuery.cpp  SphereMeshQuery.h  premake4.lua  stdafx.h
dynamics/basic_demo/: BasicDemo.cpp  BasicDemo.h  ConvexHeightFieldShape.cpp  ConvexHeightFieldShape.h  CubeMapUtils.h  main.cpp  (+7 more)
jpeglib/: CMakeLists.txt  cdjpeg.c  cdjpeg.h  premake4.lua
opencl/: stringify.py
physics_effects/: physics_effects.h
testdata/: clipFacesAndContactReductionKernel.7z  clipFacesAndContactReductionKernel_plus.7z  m_batchSolveKernel.7z
wxwidgets/wxWidgetsGLTest/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  main.cpp  main.h  premake4.lua
wxwidgets/wxWidgetsGLTest/Win32/: application.aps
(+2791 files in other folders)
